Fixed scrollbar inactive coloring

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -386,9 +386,9 @@ section {
         background: rgba(78,83,100,0.8); 
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
     }
-    ::-webkit-scrollbar-thumb:window-inactive {
-        background: rgba(255,0,0,0.4); 
-    }
+    // ::-webkit-scrollbar-thumb:window-inactive {
+    //     background: rgba(255,0,0,0.4); 
+    // }
 }
 
     
